[package]
name = "miden_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

miden-assembly = { git = "https://github.com/maticnetwork/miden", version = "0.2.0"}
miden = { git = "https://github.com/maticnetwork/miden", version = "0.2.0"}
anyhow = "1.0.33"
clap = { package = "clap-v3", version = "3.0.0-beta.1" }
